--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   provider: ^6.0.2
   fluttertoast: ^8.0.8
   pin_code_fields: ^7.3.0
+  flutter_staggered_grid_view: ^0.6.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -78,6 +79,7 @@ flutter:
      - images/img.png
      - images/img2.png
      - images/img1.png
+     - images/medal.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
